# budgetry

./: .dockerignore  .env.example  .gitignore  Dockerfile  LEARNING_PLAN.md  README.md  budget.db  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml
app/: Budget App Market Trends for Success.html  __init__.py  app.py  auth.py  auth0_api.py  budget.db  budget_engine.py  categories.py  categories_menu.py  cli.py  database.py  main.py  models.py  payees.py  payees_menu.py  plaid_client.py  reports_menu.py  routes.py  style.py  test_engine.py  transaction_menu.py  ui.py  utilies.py  utils.py
app/menus/: categories_menu.py  payees_menu.py  transaction_menu.py
app/static/: app.js  manifest.json  style.css  sw.js
app/templates/: accounts.html  add_transaction.html  admin_users.html  base.html  budget.html  cashflow.html  categories.html  edit_category.html  edit_payee.html  edit_transaction.html  forecast.html  insights.html  login.html  mfa_challenge.html  onboarding.html  payees.html  plaid_connect.html  profile.html  recurring.html  register.html  reports.html  set_target.html  settings.html  setup_mfa.html  streaks.html  transactions.html
tests/: conftest.py  test_smoke.py
