[project]
name = "budgetry"
version = "1.0.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "app/app.py",
    "app/ui.py",
    "app/style.py",
    "app/test_engine.py",
    "app/utils.py",
    "app/main.py",
    "app/*_menu.py",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
